--- a/wbrannock_assignment_7.ipynb
+++ b/wbrannock_assignment_7.ipynb
@@ -647,7 +647,7 @@
     "\n",
     "Take the derivative with respect to $\\lambda$\n",
     "\n",
-    "$\\ell'(\\lambda) = \\frac{\\sum y_i}{\\lambda} - n$\n",
+    "$\\ell'(\\lambda) = \\frac{\\sum_{i=1}^n y_i}{\\lambda} - n$\n",
     "\n",
     "\n",
     "Setting equal to 0 and solving for $\\hat{\\lambda}$ to get the MLE\n",
